--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   # 工具
   intl: ^0.18.1
   url_launcher: ^6.2.2
+  
+  # 本地通知
+  flutter_local_notifications: ^17.0.0
 
 dev_dependencies:
   flutter_test:
